syntax = "proto3";

option java_outer_classname = "HelloWorldClass";
option java_package = "io.github.picodotdev.blogbitix.grpc.service";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service HelloWorld {
   rpc HelloMessage(HelloRequest) returns (HelloResponse) {}
   rpc HelloStream(HelloRequest) returns (stream HelloResponse);
}